--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/*Fuentes*/
+/*PaLeta de Colores */
 * {
   margin: 0;
   padding: 0; }
@@ -94,16 +96,20 @@ main {
   text-decoration: none;
   padding: 10px;
   color: white;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold; }
 
 .nav-link:hover {
   color: white;
   background-color: #000000;
   border-radius: 5px; }
 
+body {
+  background-color: #000; }
+
 .Acerca-de-mi {
   width: 100%;
-  background-color: white;
   height: 600px; }
 
 .acerca {
@@ -142,6 +148,15 @@ main {
   font-size: 50px;
   margin: 30px; }
 
+p {
+  color: #fff;
+  font-family: "Raleway", sans-serif; }
+
+.titulo-card {
+  color: grey;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold; }
+
 .card-acerca {
   display: flex;
   height: 230px;
@@ -176,28 +191,48 @@ main {
 .fotome {
   height: 200px;
   width: 200px;
-  background-color: green;
+  background-color: #A3001D;
   border-radius: 150px;
   position: relative;
-  margin: 15px; }
+  margin: 15px;
+  background-image: url("../images/1655346792069.jfif");
+  background-position: center; }
 
 .habilidades {
   width: 590px;
-  background-color: yellow;
   height: 394px;
-  position: relative; }
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px; }
 
 .bar {
-  position: relative; }
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  margin: 4px; }
+
+.barra {
+  display: flex;
+  align-items: flex-start;
+  width: 90%;
+  background-color: #750318;
+  display: flex;
+  flex-direction: column; }
 
 .bar span {
-  display: initial; }
-
-.fill {
-  width: 90%;
-  background-color: red; }
+  display: initial;
+  align-items: flex-end; }
 
 .tag {
   height: 28px;
   width: 110px;
-  background-color: greenyellow; }
+  background-color: #A3001D;
+  display: flex;
+  justify-content: center;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold; }
+
+.nivelskill {
+  font-size: 15px;
+  color: #fff; }
