--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,17 @@
+/*Fuentes*/
+$font1: 'Kaushan Script', cursive;
+$font2: 'Press Start 2P', cursive;
+$font3: 'Caveat', cursive;
+$font4: 'Secular One', sans-serif;
+$font5: 'Raleway', sans-serif;
+$font6: 'Raleway', sans-serif;
+/*PaLeta de Colores */
+$color1: #A3001D;
+$color2: #fff;
+$color3: #000;
+$color4: #808080;
+
+
 *{
     margin: 0;
     padding: 0;
@@ -99,6 +113,8 @@ font-family: 'Press Start 2P', cursive;
     padding: 10px;
     color: white;
     text-transform: uppercase;
+    font-family: $font5;
+    font-weight: bold;
 }
 
 .nav-link:hover{
@@ -107,9 +123,12 @@ font-family: 'Press Start 2P', cursive;
     border-radius: 5px;
 }
 
+body{
+    background-color: #000;
+}
+
 .Acerca-de-mi{
     width: 100%;
-    background-color: white;
     height: 600px;
 }
 
@@ -154,6 +173,17 @@ font-family: 'Press Start 2P', cursive;
     margin: 30px;
 }
 
+p{
+    color: $color2;
+    font-family: $font6;
+}
+
+.titulo-card{
+    color: grey;
+    font-family: $font6;
+    font-weight: bold;
+}
+
 .card-acerca{
     display: flex;
     height: 230px;
@@ -193,34 +223,56 @@ font-family: 'Press Start 2P', cursive;
 .fotome{
     height: 200px;
     width: 200px;
-    background-color: green;
+    background-color: $color1;
     border-radius: 150px;
     position: relative;
     margin: 15px;
+    background-image: url("../images/1655346792069.jfif");
+    background-position: center;
 }
 
 .habilidades{
     width: 590px;
-    background-color: yellow;
     height: 394px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
 }
 
 .bar{
     position: relative;
+    display: flex;
+    flex-direction: row;
+    margin: 4px;
+}
+
+.barra{
+    display: flex;
+    align-items: flex-start;
+    width: 90%;
+    background-color: #750318;
+    display: flex;
+    flex-direction: column;
 }
 
 .bar span{
     display: initial;
-}
-
-.fill{
-    width: 90%;
-    background-color: red;
+    align-items: flex-end;
 }
 
 .tag {
     height: 28px;
     width: 110px;
-    background-color: greenyellow;
+    background-color: $color1;
+    display: flex;
+    justify-content: center;
+    font-family: $font5;
+    font-weight: bold;
+
+}
+
+.nivelskill{
+    font-size: 15px;
+    color: $color2;
 }
