--- a/css/styles.css
+++ b/css/styles.css
@@ -108,16 +108,27 @@ main {
 body {
   background-color: #000; }
 
+.container {
+  margin: 0 auto;
+  max-width: 1200px;
+  width: 100%;
+  padding: 0 10px;
+  position: relative; }
+
 .Acerca-de-mi {
   width: 100%;
-  height: 600px; }
+  height: 600px;
+  position: relative; }
 
-.acerca {
+.titulo-section {
   position: relative;
   display: flex;
   justify-content: center;
-  margin: 30px;
-  font-size: 30px; }
+  margin: 50px;
+  font-size: 30px;
+  font-weight: 700;
+  font-family: "Secular One", sans-serif;
+  color: #fff; }
 
 .iconos-sobre-mi {
   display: flex;
@@ -146,16 +157,19 @@ body {
 
 .acercaicon {
   font-size: 50px;
-  margin: 30px; }
+  margin: 30px;
+  color: #fff; }
 
 p {
   color: #fff;
   font-family: "Raleway", sans-serif; }
 
 .titulo-card {
-  color: grey;
+  color: #838384;
   font-family: "Raleway", sans-serif;
-  font-weight: bold; }
+  font-weight: bold;
+  font-size: 24px;
+  margin-bottom: 5px; }
 
 .card-acerca {
   display: flex;
@@ -165,19 +179,10 @@ p {
   text-align: center;
   align-items: center; }
 
-.titulo-card {
-  font-size: 24px;
-  margin-bottom: 5px; }
-
-.container {
-  margin: 0 auto;
-  max-width: 1200px;
-  width: 100%;
-  padding: 0 10px; }
-
 .skills {
   height: 394px;
-  display: flex; }
+  display: flex;
+  margin-top: 200px; }
 
 .info-yo {
   width: 590px;
@@ -189,14 +194,18 @@ p {
   text-align: center; }
 
 .fotome {
-  height: 200px;
-  width: 200px;
+  height: 300px;
+  width: 300px;
   background-color: #A3001D;
-  border-radius: 150px;
+  border-radius: 225px;
   position: relative;
   margin: 15px;
   background-image: url("../images/1655346792069.jfif");
-  background-position: center; }
+  background-size: contain; }
+
+.text-card {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500; }
 
 .habilidades {
   width: 590px;
@@ -224,15 +233,197 @@ p {
   display: initial;
   align-items: flex-end; }
 
+.html {
+  width: 90%; }
+
+.css {
+  width: 80%; }
+
+.js {
+  width: 60%; }
+
+.react {
+  width: 50%; }
+
+.logotecno {
+  font-size: 25px;
+  padding: 1px;
+  text-align: center;
+  padding-right: 5px; }
+
 .tag {
-  height: 28px;
+  height: 30px;
   width: 110px;
   background-color: #A3001D;
-  display: flex;
-  justify-content: center;
   font-family: "Raleway", sans-serif;
-  font-weight: bold; }
+  font-weight: bold;
+  color: #fff;
+  font-size: 17px;
+  text-align: center;
+  padding: 5px; }
 
 .nivelskill {
-  font-size: 15px;
-  color: #fff; }
+  font-size: 20px;
+  color: #fff;
+  font-family: "Secular One", sans-serif;
+  margin-left: 10px; }
+
+.contacto {
+  width: 100%;
+  background-color: black;
+  position: relative; }
+
+.titulo-contacto {
+  width: 100%;
+  background: #A3001D;
+  font-size: 30px;
+  font-weight: 700;
+  font-family: "Secular One", sans-serif;
+  position: relative;
+  text-align: center; }
+
+#onda {
+  display: flex;
+  position: relative; }
+
+.login-box {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, 1%);
+  background: rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px; }
+
+.login-box h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: #fff;
+  text-align: center; }
+
+.login-box .user-box {
+  position: relative; }
+
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent; }
+
+.login-box .user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: .5s; }
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: white;
+  font-size: 12px; }
+
+.login-box form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #fff;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 40px;
+  letter-spacing: 4px; }
+
+.login-box a:hover {
+  background: #A3001D;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #A3001D, 0 0 25px #A3001D, 0 0 50px #A3001D, 0 0 100px #A3001D; }
+
+.login-box a span {
+  position: absolute;
+  display: block; }
+
+.login-box a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #838384);
+  animation: btn-anim1 1s linear infinite; }
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%; }
+  50%, 100% {
+    left: 100%; } }
+
+.login-box a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #838384);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: .25s; }
+
+@keyframes btn-anim2 {
+  0% {
+    top: -100%; }
+  50%, 100% {
+    top: 100%; } }
+
+.login-box a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #838384);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: .5s; }
+
+@keyframes btn-anim3 {
+  0% {
+    right: -100%; }
+  50%, 100% {
+    right: 100%; } }
+
+.login-box a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #838384);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: .75s; }
+
+@keyframes btn-anim4 {
+  0% {
+    bottom: -100%; }
+  50%, 100% {
+    bottom: 100%; } }
+
+textarea {
+  resize: none;
+  background: transparent;
+  color: white;
+  width: 310px;
+  height: 200px;
+  border-radius: 10px;
+  font-weight: 700;
+  padding: 5px;
+  border-color: #fff; }
