--- a/css/styles.css
+++ b/css/styles.css
@@ -307,7 +307,8 @@ p {
   font-weight: 700;
   font-family: "Secular One", sans-serif;
   position: relative;
-  text-align: center; }
+  text-align: center;
+  height: 700px; }
 
 #onda {
   display: flex;
@@ -315,7 +316,6 @@ p {
 
 .login-box {
   position: relative;
-  top: 50%;
   left: 50%;
   width: 400px;
   padding: 40px;
@@ -396,7 +396,8 @@ p {
 @keyframes btn-anim1 {
   0% {
     left: -100%; }
-  50%, 100% {
+  50%,
+  100% {
     left: 100%; } }
 
 .login-box a span:nth-child(2) {
@@ -411,7 +412,8 @@ p {
 @keyframes btn-anim2 {
   0% {
     top: -100%; }
-  50%, 100% {
+  50%,
+  100% {
     top: 100%; } }
 
 .login-box a span:nth-child(3) {
@@ -426,7 +428,8 @@ p {
 @keyframes btn-anim3 {
   0% {
     right: -100%; }
-  50%, 100% {
+  50%,
+  100% {
     right: 100%; } }
 
 .login-box a span:nth-child(4) {
@@ -441,7 +444,8 @@ p {
 @keyframes btn-anim4 {
   0% {
     bottom: -100%; }
-  50%, 100% {
+  50%,
+  100% {
     bottom: 100%; } }
 
 textarea {
@@ -454,3 +458,38 @@ textarea {
   font-weight: 700;
   padding: 5px;
   border-color: #fff; }
+
+.container2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh; }
+
+#apple,
+#twitter,
+#github,
+#facebook {
+  font-size: 6em;
+  background-color: #18191f;
+  color: #fff;
+  box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080, 2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080;
+  border-radius: 29px;
+  padding: 11px 19px;
+  margin: 0 40px;
+  animation: animate 3s linear infinite;
+  text-shadow: 0 0 50px #0072ff, 0 0 100px #0072ff, 0 0 150px #0072ff, 0 0 200px #0072ff; }
+
+#twitter {
+  animation-delay: 0.3s; }
+
+#facebook {
+  animation-delay: 0.7s; }
+
+#github {
+  animation-delay: 0.1s; }
+
+@keyframes animate {
+  from {
+    filter: hue-rotate(0deg); }
+  to {
+    filter: hue-rotate(360deg); } }
